# AutomaticDifferentiation

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: MacOs.yml  Ubuntu.yml  Windows.yml  test.yml
application/: main.cpp
examples/Forward/: FunctionWithInverseComposition.cpp  RootFindingOneDimensional.cpp  UnaryExpressionChain.cpp
include/AutomaticDifferentiation/: Forward.h
include/AutomaticDifferentiation/Forward/: Declarations.h  Derivative.h  Dual.h
include/JaBreStream/: JaBreStream.h
include/JaBreStream/incl/: ForwardDeclarations.h  Stream.h
include/Leveque/OneDimensional/BoundaryConditions/: BoundaryConditions.cpp  BoundaryConditions.h  PeriodicBoundaryConditions.cpp  PeriodicBoundaryConditions.h
include/Leveque/OneDimensional/DataManager/: DataManager.cpp  DataManager.h
include/Leveque/OneDimensional/Grid/: Grid.cpp  Grid.h
include/Leveque/OneDimensional/IO/: StateWriter.cpp  StateWriter.h
include/Leveque/OneDimensional/SimulationRunner/: SimulationRunner.h
include/Leveque/OneDimensional/State/: Field.cpp  Field.h  State.cpp  State.h
include/Leveque/OneDimensional/TimeStepProvider/: TimeStepProvider.cpp  TimeStepProvider.h
include/Leveque/OneDimensional/WaveStructure/: WaveStructure.cpp  WaveStructure.h
include/Leveque/Util/IO/: FileReader.h  FileWriter.h
test/AutomaticDifferentiation/Forward/: BinaryExpression.cpp  DualInitialization.cpp  UnaryExpression.cpp
test/Leveque/OneDimensional/BoundaryConditions/: BoundaryConditionsTest.cpp
test/Leveque/OneDimensional/Grid/: GridTest.cpp
test/Leveque/OneDimensional/State/: FieldTest.cpp  StateTest.cpp
test/Leveque/Util/IO/: IOTest.cpp
